--- a/assets/scss/components/promotional-message.scss
+++ b/assets/scss/components/promotional-message.scss
@@ -2,12 +2,20 @@
   margin-bottom: 100px;
   margin-top: 25px;
   text-align: center;
-
+ 
+  p{
+    margin: none ;
+    padding: none;
+    font-size: 2em;
+  }
+  strong{
+    font-size: 1em;
+  }
   h3 {
     font-size: 24px;
     line-height: normal;
     text-align: center;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.2em;
     text-transform: uppercase;
     margin: 0;
   }
@@ -16,7 +24,7 @@
     font-size: 100px;
     @include mobile { font-size: 75px; }
     margin: 0;
-
+    font-family: 'Lobster', cursive;
     background: linear-gradient(90deg, #FFB890 0%, #F75D5D 100%);
     color:transparent;
     -webkit-background-clip: text;
