--- a/assets/scss/layouts/header.scss
+++ b/assets/scss/layouts/header.scss
@@ -3,7 +3,7 @@
   align-items: center;
   max-width: 1000px;
   width: 100%;
-  height: 100px;
+  height: 150px;
   margin-left: auto;
   margin-right: auto;
 
@@ -15,9 +15,9 @@
     color: $color-black;
     text-decoration: none;
   }
-
+  
   &__logo {
-    height: 40px;
+    height: 100px;
     margin-right: 15px;
   }
 
@@ -25,6 +25,24 @@
     margin: 0;
     font-size: 24px;
   }
+
+  .menu{
+    
+    margin-left: 45%;
+  ul{
+  display: flex;
+  justify-content: end;
+  list-style: none; 
+li{
+  margin: 0px 10px;
+}
+a{
+  font-size: 1.5em;
+  color: black;
+} }
+}
+  
+  
 
   &__cart {
     margin-left: auto;
