--- a/assets/scss/layouts/product.scss
+++ b/assets/scss/layouts/product.scss
@@ -3,7 +3,16 @@
   margin-left: auto;
   margin-right: auto;
 }
-
+.slider{
+  // position: absolute;
+  // z-index: -10;
+  width: 100vw;
+  overflow-x: hidden;
+  .sliderImg{
+  width: 100%;
+  height: 100%;
+  }
+}
 .product {
   width: 100%;
   font-weight: bold;
