--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
-
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 // Utilities
 @import "./utilities/colors.scss";
 @import "./utilities/mixins.scss";
