--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,15 +2,48 @@
 
 <!-- {{ $products := getJSON "/data/products.json" }} -->
 <main class="products">
+  
   <img src="/images/icons/cheese-background.svg" alt="" class="background-image">
   <div class="promotional-message">
-    <h3>REDISCOVER</h3>
-    <h2>Cheese</h2>
-    <p>An exclusive <strong>collection of handcrafted cheese</strong> for the hardcore cheese enthusiasts.</p>
+    <h3>Serving</h3>
+    <h2>Nashua</h2>
+    <p>For <strong>over 50</strong> years!</p>
   </div>
-  {{ range where .Site.RegularPages "Section" "products"}}
-    {{ partial "product.html" .Params }}
-  {{ end }}
+  </div>
+  <div uk-slider="center: true; autoplay:true;" class="slider" >
+
+    <div class="uk-position-relative uk-visible-toggle uk-light slider" tabindex="-1" >
+
+        <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m" >
+            
+            <li>
+                <img src="/images/11560042.jpg" alt="" class="sliderImg">
+            </li>
+            <li>
+                <img src="/images/11560043.jpg" alt="" class="sliderImg">
+            </li>
+            <li>
+                <img src="/images/11560054.jpg" alt="" class="sliderImg">
+            </li>
+            <li>
+              <img src="/images/11560430_280x180.jpg" alt="" class="sliderImg">
+          </li>
+          <li>
+              <img src="/images/11560431_280x180.jpg" alt="" class="sliderImg">
+          </li>
+          <li>
+            <img src="/images/o.jpg" alt="" class="sliderImg">
+        </li>
+        </ul>
+
+        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+
+    </div>
+
+    <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+
+</div>
 </main>
 
 {{ partial "footer.html" . }}
