--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,25 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='shortcut icon' type='image/x-icon' href='/images/icons/favicon.ico' />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/css/uikit.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4" id="snipcart"></script>
-  <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
-  <title>CheeseCity</title>
+  <script src=""></script>
+  <title>Chicken'n'Chips</title>
 </head>
 <body>
   <header class="header">
     <a class="header__branding" href="/">
-      <img class="header__logo" src="/images/icons/cheese.svg" alt="cheese logo"> 
-      <h1 class="header__title">CheeseCity</h1>
+      <img class="header__logo" src="/images/icons/11559610.png" alt="cheese logo"> 
     </a>
-    <div class="header__cart">
-      <a href="#" class="snipcart-checkout" style="text-decoration: none;">
-        <div class="snipcart-summary">
-          <img src="/images/icons/cart.svg" alt="">
-          <span class="snipcart-total-price"></span>
-        </div>
-      </a>
-    </div>
+  <div class="menu">
+    <ul>
+      <li><a href="/menu">Menu</a></li>
+      <li><a href="/about">About Us</a></li>
+      <li><a href="/contact">Contact </a></li>
+    </ul>
+  </div>
   </header>
