--- a/assets/scss/layouts/product.scss
+++ b/assets/scss/layouts/product.scss
@@ -13,6 +13,26 @@
   height: 100%;
   }
 }
+.mycard{
+  align-self: flex-start;
+  width: 50em;
+}
+.mycard2{
+  align-self: flex-end;
+  width: 50em;
+}
+.mtop{
+  margin-top: 5em;
+}
+.btn{
+  color: red;
+  border-color: red;
+  &:hover{
+    color: darkred;
+    border-color: darkred;
+  }
+}
+
 .product {
   width: 100%;
   font-weight: bold;
