--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
   
   <img src="/images/icons/cheese-background.svg" alt="" class="background-image">
   <div class="promotional-message">
-    <h3>Serving</h3>
+    <h3>-Serving-</h3>
     <h2>Nashua</h2>
     <p>For <strong>over 50</strong> years!</p>
   </div>
@@ -43,6 +43,34 @@
 
     <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
 
+</div>
+<div class="mtop"></div>
+<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard"  uk-grid>
+  <div class="uk-card-media-left uk-cover-container">
+      <img src="/images/11560042.jpg" alt="" uk-cover>
+      <canvas width="600" height="400"></canvas>
+  </div>
+  <div>
+      <div class="uk-card-body">
+          <h3 class="uk-card-title">Catering Available</h3>
+          <p>Rely on us for full-service catering tailored to your particular event and preferences. Your guests won’t soon forget our crowd-pleasing cuisine</p>
+          <a class="uk-button uk-button-default btn" href="/catering">Catering Menu</a>
+      </div>
+  </div>
+</div>
+<div class="mtop"></div>
+<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard2" uk-grid>
+  <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+      <img src="/images/11560042.jpg" alt="" uk-cover>
+      <canvas width="600" height="400"></canvas>
+  </div>
+  <div>
+      <div class="uk-card-body">
+          <h3 class="uk-card-title">Homemade Cuisine</h3>
+          <p>Visit Chicken N Chips for a huge selection of delicious American classics made fresh daily. You can count on hearty portions and friendly service!</p>
+          <a class="uk-button uk-button-default btn" href="/menu">Menu</a>
+      </div>
+  </div>
 </div>
 </main>
 
