--- a/layouts/section/menu.html
+++ b/layouts/section/menu.html
@@ -8,13 +8,25 @@
     <h2>Cheese</h2>
     <p>An exclusive <strong>collection of handcrafted cheese</strong> for the hardcore cheese enthusiasts.</p>
   </div>
-  
-
+  <div class="uk-width-1-1">
+    <ul class="uk-tab" data-uk-tab="{connect:'#my-id'}">
+      <li><a href="">Tab 1</a></li>
+      <li><a href="">Tab 2</a></li>
+      <li><a href="">Tab 3</a></li>
+    </ul>
+    <ul id="my-id" class="uk-switcher uk-margin">
+      <li><a href="#" id="autoplayer" data-uk-switcher-item="next"></a>
+        <h1>Chicken</h1>
+      </li>
+      <li>Content 2</li>
+      <li>Content 3</li>
+    </ul>
+  </div>
 
   {{ range where .Site.RegularPages "Section" "products"}}
-    {{ partial "product.html" .Params }}
+  {{ partial "product.html" .Params }}
   {{ end }}
-  
+
 </main>
 
 {{ partial "footer.html" . }}
