--- a/layouts/partials/product.html
+++ b/layouts/partials/product.html
@@ -4,12 +4,8 @@
   <p class="product__description">{{ .description }}</p>
   <div class="product__button-container">
     <div class="product__price">${{ .price }}</div>
-    <button
-      class="snipcart-add-item buy-button"
-      data-item-id="{{ .id }}"
-      data-item-name="{{ .name }}"
-      data-item-price="{{ .price }}"
-      data-item-url="{{ .product_url }}"
+    <button class="snipcart-add-item buy-button" data-item-id="{{ .id }}" data-item-tag="{{ .tag }}"
+      data-item-name="{{ .name }}" data-item-price="{{ .price }}" data-item-url="{{ .product_url }}"
       data-item-description="{{ .description }}">
       Add to cart
     </button>
