--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./components/promotional-message.scss";
 
 // Layouts
+@import "./layouts/fooditem.scss";
 @import "./layouts/header.scss";
 @import "./layouts/product.scss";
 @import "./layouts/footer.scss";
@@ -19,7 +20,8 @@
   color: $color-black;
 }
 
-html, body {
+html,
+body {
   min-height: 100vh;
   padding: 0;
   margin: 0;
@@ -30,6 +32,7 @@ body {
     padding-right: 20px;
     padding-left: 20px;
   }
+
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
@@ -38,6 +41,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.foodContent {
+  display: flex;
+  ;
 }
 
 .background-image {
