--- a/layouts/partials/fooditem.html
+++ b/layouts/partials/fooditem.html
@@ -1,5 +1,6 @@
-<div class="product">
-    <h2 class="product__name">{{ .name }}</h2>
+<div class="foodItem">
+    <h2>{{ .name }}</h2>
+    <h4>{{ .description }}</h4>
     <h2>${{ .price }}</h2>
-</div>
+    <h2>${{ .price_large }}</h2>
 </div>
