--- a/layouts/partials/fooditem.html
+++ b/layouts/partials/fooditem.html
@@ -1,6 +1,9 @@
 <div class="foodItem">
     <h2>{{ .name }}</h2>
     <h4>{{ .description }}</h4>
+    <h4>{{ .small }}</h4>
     <h2>${{ .price }}</h2>
+    <h4>{{ .large }}</h4>
+
     <h2>${{ .price_large }}</h2>
 </div>
