--- a/assets/scss/layouts/fooditem.scss
+++ b/assets/scss/layouts/fooditem.scss
@@ -3,11 +3,32 @@
     margin-left: 1em;
     padding: 1em;
     text-align: center;
-    background-color: blue;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
 
     h2,
     h4 {
         padding: 0;
         margin: 0;
+
+
     }
+
+
+    .pricing {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .p {
+
+        display: flex;
+        justify-content: center;
+        // justify-content: space-around;
+
+    }
+
+
 }
