--- a/layouts/partials/fooditem.html
+++ b/layouts/partials/fooditem.html
@@ -3,12 +3,12 @@
     <h4>{{ .description }}</h4>
     <div class="p">
         <div class="pricing">
-            <h4>{{ .small }}</h4>
+            <h4>{{ .size }}</h4>
             <h2>{{ .price }}</h2>
         </div>
-        <div class="pricing lg">
-            <h4>{{ .large }}</h4>
-            <h2>{{ .price_large }}</h2>
+        <div class="pricing">
+            <h4>{{ .size }}</h4>
+            <h2>{{ .price }}</h2>
         </div>
     </div>
 </div>
