--- a/assets/scss/components/promotional-message.scss
+++ b/assets/scss/components/promotional-message.scss
@@ -2,15 +2,18 @@
   margin-bottom: 50px;
   margin-top: 25px;
   text-align: center;
- 
-  p{
-    margin: none ;
+
+  p {
+
+    margin: none;
     padding: none;
     font-size: 2em;
   }
-  strong{
+
+  strong {
     font-size: 1em;
   }
+
   h3 {
     font-size: 24px;
     line-height: normal;
@@ -22,9 +25,14 @@
 
   h2 {
     font-size: 100px;
-    @include mobile { font-size: 75px; }
+
+    @include mobile {
+      font-size: 75px;
+    }
+
     margin: 0;
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster',
+    cursive;
     background: linear-gradient(90deg, #FFB890 0%, #F75D5D 100%);
     color:transparent;
     -webkit-background-clip: text;
