--- a/assets/scss/layouts/fooditem.scss
+++ b/assets/scss/layouts/fooditem.scss
@@ -1,6 +1,6 @@
 .foodItem {
-    width: 20em;
-    margin-left: 1em;
+    width: 25em;
+    margin: 1em;
     padding: 1em;
     text-align: center;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -30,5 +30,8 @@
 
     }
 
+    .price {
+        font-size: 1.5em;
+    }
 
 }
