--- a/assets/scss/layouts/product.scss
+++ b/assets/scss/layouts/product.scss
@@ -1,33 +1,47 @@
 .products {
-  max-width: 1000px;
+  // max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
+
+  @media (max-width: 768px) {
+    margin: 0;
+    padding: 0;
+    // max-width: 0px;
+    width: 100vw;
+  }
 }
-.slider{
+
+.slider {
   // position: absolute;
   // z-index: -10;
   width: 100vw;
   overflow-x: hidden;
-  .sliderImg{
-  width: 100%;
-  height: 100%;
+
+  .sliderImg {
+    width: 100%;
+    height: 100%;
   }
 }
-.mycard{
+
+.mycard {
   align-self: flex-start;
   width: 50em;
 }
-.mycard2{
+
+.mycard2 {
   align-self: flex-end;
   width: 50em;
 }
-.mtop{
+
+.mtop {
   margin-top: 5em;
 }
-.btn{
+
+.btn {
   color: red;
   border-color: red;
-  &:hover{
+
+  &:hover {
     color: darkred;
     border-color: darkred;
   }
@@ -38,11 +52,11 @@
   font-weight: bold;
 
   display: grid;
-  grid-template-areas: 
-  "name         name         image"
-  "description  description  image"
-  "button       button       image"
-  ".            .            image";
+  grid-template-areas:
+    "name         name         image"
+    "description  description  image"
+    "button       button       image"
+    ".            .            image";
   grid-template-columns: 1fr 1fr 3fr;
   margin-bottom: 100px;
   grid-column-gap: 100px;
@@ -83,21 +97,21 @@
   }
 
   &:nth-of-type(odd) {
-    grid-template-areas: 
-    "image name         name"
-    "image description  description"
-    "image button       button"
-    "image .            .";
+    grid-template-areas:
+      "image name         name"
+      "image description  description"
+      "image button       button"
+      "image .            .";
     grid-template-columns: 3fr 1fr 1fr;
 
     @include mobile {
-      grid-template-areas: 
-      "image        image      "
-      "name         name       "
-      "description  description"
-      "button       button     ";
+      grid-template-areas:
+        "image        image      "
+        "name         name       "
+        "description  description"
+        "button       button     ";
       grid-template-columns: 1fr 1fr;
-  
+
       img {
         height: 300px;
         width: 100%;
@@ -107,11 +121,11 @@
   }
 
   @include mobile {
-    grid-template-areas: 
-    "image        image      "
-    "name         name       "
-    "description  description"
-    "button       button     ";
+    grid-template-areas:
+      "image        image      "
+      "name         name       "
+      "description  description"
+      "button       button     ";
     grid-template-columns: 1fr 1fr;
 
     img {
