--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,76 +2,83 @@
 
 <!-- {{ $products := getJSON "/data/products.json" }} -->
 <main class="products">
-  
+
   <img src="/images/icons/cheese-background.svg" alt="" class="background-image">
   <div class="promotional-message">
-    <h3>-Serving-</h3>
-    <h2>Nashua</h2>
-    <p>For <strong>over 50</strong> years!</p>
+    <h3 uk-scrollspy="cls: uk-animation-fade; delay: 500;">-Serving-</h3>
+    <h2 uk-scrollspy="cls: uk-animation-fade; delay: 800;">Nashua</h2>
+    <p uk-scrollspy="cls: uk-animation-fade; delay: 1100;">For <strong>over 50</strong> years!</p>
   </div>
   </div>
-  <div uk-slider="center: true; autoplay:true;" class="slider" >
+  <div uk-slider="center: true; autoplay:true;" class="slider">
 
-    <div class="uk-position-relative uk-visible-toggle uk-light slider" tabindex="-1" >
+    <div class="uk-position-relative uk-visible-toggle uk-light slider" tabindex="-1">
 
-        <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m" >
-            
-            <li>
-                <img src="/images/11560042.jpg" alt="" class="sliderImg">
-            </li>
-            <li>
-                <img src="/images/11560043.jpg" alt="" class="sliderImg">
-            </li>
-            <li>
-                <img src="/images/11560054.jpg" alt="" class="sliderImg">
-            </li>
-            <li>
-              <img src="/images/11560430_280x180.jpg" alt="" class="sliderImg">
-          </li>
-          <li>
-              <img src="/images/11560431_280x180.jpg" alt="" class="sliderImg">
-          </li>
-          <li>
-            <img src="/images/o.jpg" alt="" class="sliderImg">
+      <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
+
+        <li>
+          <img src="/images/11560042.jpg" alt="" class="sliderImg">
         </li>
-        </ul>
+        <li>
+          <img src="/images/11560043.jpg" alt="" class="sliderImg">
+        </li>
+        <li>
+          <img src="/images/11560054.jpg" alt="" class="sliderImg">
+        </li>
+        <li>
+          <img src="/images/11560430_280x180.jpg" alt="" class="sliderImg">
+        </li>
+        <li>
+          <img src="/images/11560431_280x180.jpg" alt="" class="sliderImg">
+        </li>
+        <li>
+          <img src="/images/o.jpg" alt="" class="sliderImg">
+        </li>
+      </ul>
 
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+      <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+        uk-slider-item="previous"></a>
+      <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+        uk-slider-item="next"></a>
 
     </div>
 
     <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
 
-</div>
-<div class="mtop"></div>
-<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard"  uk-grid>
-  <div class="uk-card-media-left uk-cover-container">
+  </div>
+  <div class="mtop"></div>
+  <div
+    class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard uk-animation-slide-left-small uk-width-1-2"
+    uk-grid>
+    <div class="uk-card-media-left uk-cover-container">
       <img src="/images/11560042.jpg" alt="" uk-cover>
       <canvas width="600" height="400"></canvas>
-  </div>
-  <div>
-      <div class="uk-card-body">
-          <h3 class="uk-card-title">Catering Available</h3>
-          <p>Rely on us for full-service catering tailored to your particular event and preferences. Your guests won’t soon forget our crowd-pleasing cuisine</p>
-          <a class="uk-button uk-button-default btn" href="/catering">Catering Menu</a>
+    </div>
+    <div>
+      <div class="uk-card-body ">
+        <h3 class="uk-card-title headLine">Catering Available</h3>
+        <p>Rely on us for full-service catering tailored to your particular event and preferences. Your guests won’t
+          soon forget our crowd-pleasing cuisine</p>
+        <a class="uk-button uk-button-default btn" href="/catering">Catering Menu</a>
       </div>
+    </div>
   </div>
-</div>
-<div class="mtop"></div>
-<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard2" uk-grid>
-  <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+  <div class="mtop"></div>
+  <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2s uk-margin mycard2 uk-width-1-2 " uk-grid
+    uk-scrollspy="cls: uk-animation-slide-right-small;">
+    <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
       <img src="/images/11560042.jpg" alt="" uk-cover>
       <canvas width="600" height="400"></canvas>
-  </div>
-  <div>
+    </div>
+    <div>
       <div class="uk-card-body">
-          <h3 class="uk-card-title">Homemade Cuisine</h3>
-          <p>Visit Chicken N Chips for a huge selection of delicious American classics made fresh daily. You can count on hearty portions and friendly service!</p>
-          <a class="uk-button uk-button-default btn" href="/menu">Menu</a>
+        <h3 class="uk-card-title">Homemade Cuisine</h3>
+        <p>Visit Chicken N Chips for a huge selection of delicious American classics made fresh daily. You can count on
+          hearty portions and friendly service!</p>
+        <a class="uk-button uk-button-default btn" href="/menu">Menu</a>
       </div>
+    </div>
   </div>
-</div>
 </main>
 
 {{ partial "footer.html" . }}
