--- a/layouts/partials/fooditem2price.html
+++ b/layouts/partials/fooditem2price.html
@@ -3,9 +3,12 @@
     <h4>{{ .description }}</h4>
     <div class="p">
         <div class="pricing">
-            <h2 class="price">Large</h2>
+            <h2>Small</h2>
             <h2>{{ .price }}</h2>
         </div>
-
+        <div class="pricing">
+            <h2>Large</h2>
+            <h2>{{ .pricelg }}</h2>
+        </div>
     </div>
 </div>
