--- a/layouts/index.html
+++ b/layouts/index.html
@@ -64,7 +64,8 @@
     </div>
   </div>
   <div class="mtop"></div>
-  <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2s uk-margin mycard2 uk-width-1-2 " uk-grid
+
+  <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard2 uk-width-1-2" uk-grid
     uk-scrollspy="cls: uk-animation-slide-right-small;">
     <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
       <img src="/images/11560042.jpg" alt="" uk-cover>
