--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
   <footer class="footer">
-    Powered by&nbsp;<a href="https://gohugo.io/">Hugo</a>&nbsp;&&nbsp;<a href="https://www.snipcart.com">snipcart</a>
+    <h1>Chicken'n'Chips</h1>
   </footer>
-</body>
-</html>
+  </body>
+
+  </html>
