--- a/assets/scss/layouts/fooditem.scss
+++ b/assets/scss/layouts/fooditem.scss
@@ -6,6 +6,10 @@
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     border-radius: 10px;
 
+    @media (max-width:396px) {
+        width: 20em;
+    }
+
     h2,
     h4 {
         padding: 0;
