--- a/assets/scss/layouts/header.scss
+++ b/assets/scss/layouts/header.scss
@@ -117,7 +117,13 @@
       a {
         font-size: 1.5em;
         color: black;
+        text-decoration: none;
+
+        &:hover {
+          border-bottom: 1px solid black;
+        }
       }
+
     }
   }
 
