--- a/assets/scss/layouts/product.scss
+++ b/assets/scss/layouts/product.scss
@@ -23,6 +23,21 @@
   }
 }
 
+.mycard,
+.mycard2 {
+  margin-left: 5em;
+  margin-right: 5em;
+
+  @media (max-width:960px) {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+
+  @media (max-width:834px) {
+    margin: 0;
+  }
+}
+
 .mycard {
   align-self: flex-start;
   width: 50em;
@@ -48,7 +63,7 @@
 }
 
 .product {
-  width: 100%;
+  width: 100vw;
   font-weight: bold;
 
   display: grid;
