--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,9 @@
 
 <!-- {{ $products := getJSON "/data/products.json" }} -->
 <main class="products">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/css/uikit.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit-icons.min.js"></script>
   <img src="/images/icons/cheese-background.svg" alt="" class="background-image">
   <div class="promotional-message">
     <h3 uk-scrollspy="cls: uk-animation-fade; delay: 500;">-Serving-</h3>
