--- a/layouts/partials/fooditem.html
+++ b/layouts/partials/fooditem.html
@@ -3,7 +3,7 @@
     <h4>{{ .description }}</h4>
     <div class="p">
         <div class="pricing">
-            <h2 class="price">Large</h2>
+            <!-- <h2 class="price">Large</h2> -->
             <h2>{{ .price }}</h2>
         </div>
 
