--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,7 +34,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/menu">Menu</a></li>
           <li><a href="/about">About Us</a></li>
-          <li><a href="/contact">Contact </a></li>
+          <li><a href="/catering">Catering</a></li>
         </ul>
         <button class="uk-offcanvas-close" type="button" uk-close></button>
 
@@ -45,8 +45,8 @@
       <ul>
 
         <li><a href="/menu">Menu</a></li>
+        <li><a href="/catering">Catering </a></li>
         <li><a href="/about">About Us</a></li>
-        <li><a href="/contact">Contact </a></li>
       </ul>
     </div>
   </header>
