--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -70,8 +70,11 @@ main {
 }
 
 .menHeading {
+
   text-align: center;
-  font-size: 2em;
+  padding-top: 0;
+  margin-top: 0;
+  font-size: 3em;
   padding-left: .5em;
   color: rgb(150, 23, 23);
   padding-right: .5em;
@@ -81,6 +84,13 @@ main {
   @media (max-width: 483px) {
     font-size: 1.5em;
   }
+}
+
+.subHeading {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+
 }
 
 .foodContent {
