--- a/layouts/section/menu.html
+++ b/layouts/section/menu.html
@@ -19,27 +19,29 @@
       <li><a href="">Kids Meals</a></li>
     </ul>
     <ul id="my-id" class="uk-switcher uk-margin ">
-      <li class="foodContent uk-animation-fade">
-        <h1 class="menHeading">All served with Mashed Potatoes with gravy French Fries, Cole Slaw & a
+      <li class="uk-animation-fade">
+        <h1 class="menHeading">Dinner</h1>
+        <h2 class="subHeading">All served with Mashed Potatoes with gravy French Fries, Cole Slaw & a
           roll.</h1>
-        <div class="foodContent">
-          {{ range where .Site.RegularPages "Section" "dinner"}}
-          {{ partial "fooditem.html" .Params }}
-          {{ end }}
-          {{ range where .Site.RegularPages "Section" "dinnersmlg"}}
-          {{ partial "fooditem2price.html" .Params }}
-          {{ end }}
-        </div>
-        <h2 class="menHeading">From the Grill</h2>
-        <div class="foodContent">
-          {{ range where .Site.RegularPages "Section" "grill"}}
-          {{ partial "fooditem.html" .Params }}
-          {{ end }}
-        </div>
+          <div class="foodContent">
+            {{ range where .Site.RegularPages "Section" "dinner"}}
+            {{ partial "fooditem.html" .Params }}
+            {{ end }}
+            {{ range where .Site.RegularPages "Section" "dinnersmlg"}}
+            {{ partial "fooditem2price.html" .Params }}
+            {{ end }}
+          </div>
+          <h2 class="menHeading">From the Grill</h2>
+          <div class="foodContent">
+            {{ range where .Site.RegularPages "Section" "grill"}}
+            {{ partial "fooditem.html" .Params }}
+            {{ end }}
+          </div>
       </li>
       <li class="foodContent uk-animation-fade">
-        <h1 class="menHeading">Available Dressings: Italian, Lite Italian, Blue Cheese, Ranch, Thousand Island, Caesar,
-          Greek, Honey Mustard. Add Feta to any Salad for 99¢</h1>
+        <h1 class="menHeading">Salads</h1>
+        <h2 class="subHeading">Available Dressings: Italian, Lite Italian, Blue Cheese, Ranch, Thousand Island, Caesar,
+          Greek, Honey Mustard. Add Feta to any Salad for 99¢</h2>
         {{ range where .Site.RegularPages "Section" "salad"}}
         {{ partial "fooditem.html" .Params }}
         {{end}}
@@ -70,7 +72,15 @@
           {{end}}
         </div>
       </li>
-      <li>bulkie</li>
+      <li class="foodContent">
+        <h1 class="menHeading">Bulkies</h1>
+        <div class="foodContent">
+          {{ range where .Site.RegularPages "Section" "bulkie"}}
+          {{ partial "fooditem.html" .Params }}
+          {{end}}
+        </div>
+
+      </li>
       <li class="foodContent">
         <h1 class="menHeading">Sides</h1>
         <div class="foodContent">
@@ -95,6 +105,25 @@
           {{ partial "fooditem.html" .Params }}
           {{end}}
         </div>
+      </li>
+      <li class="foodContent">
+        <h1 class="menHeading">Desserts</h1>
+        <div class="foodContent">
+          {{ range where .Site.RegularPages "Section" "dessert"}}
+          {{ partial "fooditem.html" .Params }}
+          {{end}}
+        </div>
+
+      </li>
+      <li>
+        <h1 class="menHeading">Kids Meals</h1>
+        <h2 class="subHeading">All served with french fries.</h2>
+        <div class="foodContent">
+          {{ range where .Site.RegularPages "Section" "kids"}}
+          {{ partial "fooditem.html" .Params }}
+          {{end}}
+        </div>
+
       </li>
     </ul>
   </div>
