--- a/layouts/section/catering.html
+++ b/layouts/section/catering.html
@@ -2,41 +2,30 @@
 
 <!-- {{ $products := getJSON "/data/products.json" }} -->
 <main>
-    <!-- <img src="/images/icons/cheese-background.svg" alt="" class="background-image">
-  <div class="promotional-message">
-    <h3>sda</h3>
-    <h2>Cheese</h2>
-    <p>An exclusive <strong>collection of handcrafted cheese</strong> for the hardcore cheese enthusiasts.</p>
-  </div> -->
     <div class="uk-width-3-4 tabs">
         <ul class="uk-tab tabs2" data-uk-tab="{connect:'#my-id'}">
-            <li><a href="">Dinner</a></li>
+            <li><a href="">Catering</a></li>
             <li><a href="">Salads</a></li>
-            <li><a href="">All Things Chicken</a></li>
-            <li><a href="">Bulkie Sandwiches</a></li>
-            <li><a href="">Sides</a></li>
-            <li><a href="">Desserts</a></li>
-            <li><a href="">Kids Meals</a></li>
         </ul>
         <ul id="my-id" class="uk-switcher uk-margin ">
             <li>
-                <h1 class="menHeading">Kids Meals</h1>
-                <h2 class="subHeading">All served with french fries.</h2>
+                <h1 class="menHeading">Catering</h1>
                 <div class="foodContent">
                     {{ range where .Site.RegularPages "Section" "cat3pc"}}
-                    {{ partial "fooditem.html" .Params }}
+                    {{ partial "catering3pc.html" .Params }}
                     {{end}}
                 </div>
-
+            </li>
+            <li>
+                <h1 class="menHeading">Salads</h1>
+                <div class="foodContent">
+                    {{ range where .Site.RegularPages "Section" "cateringSalads"}}
+                    {{ partial "saladscatering.html" .Params }}
+                    {{end}}
+                </div>
             </li>
         </ul>
     </div>
-
-    <!-- 
-  {{ range where .Site.RegularPages "Section" "products" }}
-  {{ partial "product.html" .Params }}
-  {{ end }} -->
-
 </main>
 
 {{ partial "footer.html" . }}
