--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -82,15 +82,20 @@ main {
     cursive;
 
   @media (max-width: 483px) {
-    font-size: 1.5em;
+    font-size: 3em;
   }
 }
 
 .subHeading {
   text-align: center;
-  margin: 0;
-  padding: 0;
+  padding-top: none;
+  padding-bottom: none;
+  padding-left: 1em;
+  padding-right: 1em;
 
+  @media (max-width: 483px) {
+    font-size: 1.2em;
+  }
 }
 
 .foodContent {
