--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,23 @@
   <footer class="footer">
-    <h1>Chicken'n'Chips</h1>
+    <div class="nav">
+      <h1>Navigation</h1>
+      <ul class="bottomNav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/menu">Menu</a></li>
+        <li><a href="/about">About Us</a></li>
+        <li><a href="/catering">Catering</a></li>
+      </ul>
+    </div>
+    <!-- <div class="extra">
+      <a href="">Menu PDF</a> </div> -->
+    <div class="info">
+
+      <h1>Chicken N Chips</h1>
+      <h2>12 W Hollis St, Nashua, NH 03060</h2>
+      <h2>(603) 943-5840</h2>
+      <a href="" class="uk-icon-button" uk-icon="facebook"></a>
+      </a>
+    </div>
   </footer>
   </body>
 
