--- a/assets/scss/layouts/header.scss
+++ b/assets/scss/layouts/header.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 .header {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
   max-width: 1000px;
@@ -111,16 +114,29 @@
       list-style: none;
 
       li {
+        font-family: 'Roboto', sans-serif;
         margin: 0px 10px;
       }
 
       a {
-        font-size: 1.5em;
+        transition-timing-function: ease-in;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 1.2em;
         color: black;
         text-decoration: none;
+        border-bottom: 0px solid black;
+        transition: transform .3s ease-out;
+        display: inline-block;
+
 
         &:hover {
-          border-bottom: 1px solid black;
+          transform: translate(0, -3px);
+          transition-timing-function: ease-in;
+          text-decoration: none;
+          // border-bottom: 3px solid black;
+          transition: .5s all;
+          /* or whatever colour you'd prefer */
         }
       }
 
