--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -69,6 +69,49 @@ main {
   align-items: center;
 }
 
+.textInfo {
+  margin-top: 2em;
+  margin-left: 5em;
+  margin-right: 5em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  @media (max-width: 563px) {
+    text-align: center;
+    margin-right: 1em;
+    margin-left: 1em;
+  }
+
+  .history {
+    width: 40%;
+
+    // margin-right: 1em;
+    @media (max-width: 563px) {
+      width: 100%;
+    }
+  }
+
+  .features {
+    width: 40%;
+
+    @media (max-width: 563px) {
+      width: 100%;
+    }
+  }
+
+  .last {
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 2.3em;
+    color: #D5572D;
+    font-weight: bold;
+    text-align: center;
+  }
+}
+
 .menHeading {
 
   text-align: center;
