--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -3,50 +3,96 @@
 <!-- {{ $products := getJSON "/data/products.json" }} -->
 <main>
     <div class="about">
-        <h1>About Us</h1>
-        <p>Chicken N Chips is a Nashua classic located at 12 W. Hollis St. In 2009, Jim and Gina Udice, co-owners of
-            Professor’s Pizza in Hudson, stepped in and saved the 50+ year-old fast-food mainstay. They have owned and
-            operated the chicken emporium ever since.</p>
-        <p>
-            “I always heard how this place was an institution,” stated Udice. “People love the food, and we just wanted
-            to
-            carry on the tradition.”
-        </p>
-        <p>After he and his wife bought Chicken N Chips, Udice remodeled the interior and exterior. </p>
-        <p>He decided to get back to the basics, concentrating on providing “high, high quality” for the restaurant’s
-            four
-            traditional staples: chicken stix, chicken on the bone, Jo-Jo potatoes, and onion rings.</p>
-        <p>
-            Eat-in diners can appreciate the urban feel of the place with City Hall across the street and plenty of
-            people-watching to do through the large windows. The restaurant has plenty of tables, is clean and cheerful,
-            and
-            guests love the chicken-o-bilia displayed in a curio case we call “The Chicken Coop,” including the original
-            yellow and green Chicken N Chips sign. </p>
-        <p>We have a big menu, with a hamburger and some seafood included, but for the most part, we are about chicken,
-            chicken and more chicken!</p>
-        <p>“Many of the customers comment they thought we were ordering small portions, but Chicken N Chips has a very
-            generous definitions of a “small” serving,” explained Udice. “Nothing is pre-made, everything is cooked to
-            order, so we remind guests it may take 5 – 10 minutes for food to cook.”</p>
-        <p>Hands down, our customers’ favorite is the Chicken Stix, which are basically upscale chicken tenders, which
-            are
-            fresh, breaded, hand-trimmed chicken breast tenderloins. The outside is crispy, the inside is juicy, and
-            they
-            are bursting with flavor. Various sides / sauces are available to add some adventure.</p>
-        <p>With chicken leading the menu, you’d expect nicely seasoned chicken wings – and that’s what you’ll get!
-            Another
-            menu leader is the Chicken Kabob Wrap, with big chunks of charbroiled chicken breast, feta cheese, lettuce,
-            and
-            tomato with Greek dressing.</p>
-        <p> Typical appetizers include mozzarella sticks and onion rings, which are thin-cut and crispy. </p>
-        <p>The winning sides tend to be our homemade coleslaw and the Jo-Jos, which are wedge-cut potatoes battered and
-            fried to perfection.</p>
-        <p>“We do specialize in chicken, and feel we have the best chicken meals in Nashua,” said Udice. And from the
-            continuous stream of guests coming in ordering, Nashuans seem to agree.</p>
-        <p> Chicken N Chips is open 11:00 AM-9:00 PM, 7 days-a-week, offering delivery to all of Nashua, as well as a
-            catering menu for those game day, graduation parties, or
+        <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light"
+            data-src="/images/c2043cdd40b62462d40d07dd952c4edf_-united-states-new-hampshire-hillsborough-county-nashua-chicken-n-chips-603-943-5840htm.jpg"
+            uk-img uk-parallax="bgy: -200; ">
+            <h1>About Us</h1>
+        </div>
+        <div class="textInfo">
+            <div class="history">
+                <h1>History</h1>
+                <p>Chicken N Chips is a Nashua classic located at 12 W. Hollis St. In 2009, Jim and Gina Udice,
+                    co-owners of
+                    Professor’s Pizza in Hudson, stepped in and saved the 50+ year-old fast-food mainstay. They have
+                    owned
+                    and
+                    operated the chicken emporium ever since.</p>
+                <blockquote>
+                    “I always heard how this place was an institution, people love the food, and we just
+                    wanted
+                    to
+                    carry on the tradition.”
+                </blockquote>
+                <p>After he and his wife bought Chicken N Chips, Udice remodeled the interior and exterior. </p>
+                <p>He decided to get back to the basics, concentrating on providing “high, high quality” for the
+                    restaurant’s
+                    four
+                    traditional staples: chicken stix, chicken on the bone, Jo-Jo potatoes, and onion rings.</p>
+                <!-- <div class="about" uk-scrollspy="cls: uk-animation-fade; target: p; delay: 500; repeat: true"> -->
+            </div>
+            <div class="features">
+                <h1>What Makes Us Special</h1>
+                <p>
+                    Eat-in diners can appreciate the urban feel of the place with City Hall across the street and plenty
+                    of
+                    people-watching to do through the large windows. The restaurant has plenty of tables, is clean and
+                    cheerful,
+                    and
+                    guests love the chicken-o-bilia displayed in a curio case we call “The Chicken Coop,” including the
+                    original
+                    yellow and green Chicken N Chips sign. </p>
+                <p>We have a big menu, with a hamburger and some seafood included, but for the most part, we are about
+                    chicken,
+                    chicken and more chicken!</p>
+                <p>“Many of the customers comment they thought we were ordering small portions, but Chicken N Chips has
+                    a
+                    very
+                    generous definitions of a “small” serving,” explained Udice.<blockquote>“Nothing is pre-made,
+                        everything is
+                        cooked
+                        to
+                        order, so we remind guests it may take 5 – 10 minutes for food to cook.”
+                    </blockquote>
+                </p>
+                <p>Hands down, our customers’ favorite is the Chicken Stix, which are basically upscale chicken tenders,
+                    which
+                    are
+                    fresh, breaded, hand-trimmed chicken breast tenderloins. The outside is crispy, the inside is juicy,
+                    and
+                    they
+                    are bursting with flavor. Various sides / sauces are available to add some adventure.</p>
+                <!-- </div> -->
+            </div>
+            <div class="last">
+                <h1>Come try our Chicken!</h1>
+                <p>With chicken leading the menu, you’d expect nicely seasoned chicken wings – and that’s what you’ll
+                    get!
+                    Another
+                    menu leader is the Chicken Kabob Wrap, with big chunks of charbroiled chicken breast, feta cheese,
+                    lettuce,
+                    and
+                    tomato with Greek dressing.</p>
+                <p> Typical appetizers include mozzarella sticks and onion rings, which are thin-cut and crispy. </p>
+                <p>The winning sides tend to be our homemade coleslaw and the Jo-Jos, which are wedge-cut potatoes
+                    battered
+                    and
+                    fried to perfection.</p>
+                <p>
+                    <blockquote>“We do specialize in chicken, and feel we have the best chicken meals in Nashua,”
+                    </blockquote> said Udice. And
+                    from
+                    the
+                    continuous stream of guests coming in ordering, Nashuans seem to agree.
+                </p>
+                <p> Chicken N Chips is open 11:00 AM-9:00 PM, 7 days-a-week, offering delivery to all of Nashua, as well
+                    as
+                    a
+                    catering menu for those game day, graduation parties, or
 
-            any celebration. </p>
+                    any celebration. </p>
+            </div>
+        </div>
     </div>
 </main>
-
+<!-- uk-scrollspy="cls: uk-animation-fade; target: ; delay: 500; repeat: true"> -->
 {{ partial "footer.html" . }}
