--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/css/uikit.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit-icons.min.js"></script> -->
-  <img src="/images/icons/cheese-background.svg" alt="" class="background-image">
+  <img src="/images/icons/ChickenDrumstick.svg" alt="" class="background-image">
   <div class="promotional-message">
     <h3 uk-scrollspy="cls: uk-animation-fade; delay: 500;">-Serving-</h3>
     <h2 uk-scrollspy="cls: uk-animation-fade; delay: 800;">Nashua</h2>
@@ -53,7 +53,7 @@
     class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard uk-animation-slide-left-small uk-width-1-2"
     uk-grid>
     <div class="uk-card-media-left uk-cover-container">
-      <img src="/images/11560042.jpg" alt="" uk-cover>
+      <img src="/images/sliced-fried-chicken-2232433.jpg" alt="" uk-cover>
       <canvas width="600" height="400"></canvas>
     </div>
     <div>
@@ -70,7 +70,7 @@
   <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin mycard2 uk-width-1-2" uk-grid
     uk-scrollspy="cls: uk-animation-slide-right-small;">
     <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-      <img src="/images/11560042.jpg" alt="" uk-cover>
+      <img src="/images/fried-meat-on-white-plate-2338407.jpg" alt="" uk-cover>
       <canvas width="600" height="400"></canvas>
     </div>
     <div>
@@ -81,6 +81,10 @@
         <a class="uk-button uk-button-default btn" href="/menu">Menu</a>
       </div>
     </div>
+  </div>
+  <div class="orderHeading">
+    <h1>Order Now</h1>
+    <h1>(603) 943-5840</h1>
   </div>
 </main>
 
