--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,7 +15,8 @@
       <h1>Chicken N Chips</h1>
       <h2>12 W Hollis St, Nashua, NH 03060</h2>
       <h2>(603) 943-5840</h2>
-      <a href="" class="uk-icon-button" uk-icon="facebook"></a>
+      <a href="https://www.facebook.com/Chicken-N-Chips-197882283881900/timeline?_rdr=p" class="uk-icon-button"
+        uk-icon="facebook"></a>
       </a>
     </div>
   </footer>
