--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -6,7 +6,7 @@
         <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light"
             data-src="/images/c2043cdd40b62462d40d07dd952c4edf_-united-states-new-hampshire-hillsborough-county-nashua-chicken-n-chips-603-943-5840htm.jpg"
             uk-img uk-parallax="bgy: -200; ">
-            <h1>About Us</h1>
+            <h1 class="AbtHeading">About Us</h1>
         </div>
         <div class="textInfo">
             <div class="history">
@@ -92,6 +92,10 @@
                     any celebration. </p>
             </div>
         </div>
+    </div>
+    <div class="orderHeading">
+        <h1>Order Now</h1>
+        <h1>(603) 943-5840</h1>
     </div>
 </main>
 <!-- uk-scrollspy="cls: uk-animation-fade; target: ; delay: 500; repeat: true"> -->
