--- a/layouts/section/menu.html
+++ b/layouts/section/menu.html
@@ -15,8 +15,8 @@
     <ul id="my-id" class="uk-switcher uk-margin ">
       <li>
         <h1 class="menHeading">Dinner</h1>
-        <h2 class="subHeading">All served with Mashed Potatoes with gravy French Fries, Cole Slaw & a
-          roll.</h1>
+        <h2 class="subHeading">All dinners served with choice of mashed potatoes, french fries, onion rings, or Jojos as
+          well as a roll and cold slaw</h1>
           <div class="foodContent">
             {{ range where .Site.RegularPages "Section" "dinnersmlg"}}
             {{ partial "fooditem2price.html" .Params }}
