--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -69,6 +69,11 @@ main {
   align-items: center;
 }
 
+.AbtHeading {
+  font-family: 'Lobster', cursive;
+  font-size: 3em;
+}
+
 .textInfo {
   margin-top: 2em;
   margin-left: 5em;
@@ -83,11 +88,13 @@ main {
     margin-left: 1em;
   }
 
+
+
   .history {
     width: 40%;
 
     // margin-right: 1em;
-    @media (max-width: 563px) {
+    @media (max-width: 906px) {
       width: 100%;
     }
   }
@@ -95,7 +102,7 @@ main {
   .features {
     width: 40%;
 
-    @media (max-width: 563px) {
+    @media (max-width: 906px) {
       width: 100%;
     }
   }
