--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,7 +20,7 @@
 <body>
   <header class="header">
     <a class="header__branding" href="/">
-      <img class="header__logo" src="/images/icons/11559610.png" alt="cheese logo">
+      <img class="header__logo" src="/images/icons/11559610.png" alt="Logo">
     </a>
     <div class="nav">
       <a class="uk-navbar-toggle nav" uk-navbar-toggle-icon href="" uk-toggle="target: #my-id"></a>
